tests/rosetta/out/C/averages-simple-moving-average.error
cc: exit status 1
/tmp/averages-simple-moving-average.c: In function ‘fmt3’:
/tmp/averages-simple-moving-average.c:81:29: warning: passing argument 1 of ‘index_of_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   81 |   int dot = index_of_string(s, ".");
      |                             ^
/tmp/averages-simple-moving-average.c:43:34: note: expected ‘char *’ but argument is of type ‘const char *’
   43 | static int index_of_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/averages-simple-moving-average.c:83:32: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   83 |     char *tmp2 = concat_string(s, ".000");
      |                                ^
/tmp/averages-simple-moving-average.c:29:34: note: expected ‘char *’ but argument is of type ‘const char *’
   29 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/averages-simple-moving-average.c:88:24: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   88 |       s = slice_string(s, 0, dot + 4);
      |                        ^
/tmp/averages-simple-moving-average.c:49:33: note: expected ‘char *’ but argument is of type ‘const char *’
   49 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/averages-simple-moving-average.c:91:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   91 |         char *tmp3 = concat_string(s, "0");
      |                                    ^
/tmp/averages-simple-moving-average.c:29:34: note: expected ‘char *’ but argument is of type ‘const char *’
   29 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/averages-simple-moving-average.c: In function ‘pad’:
/tmp/averages-simple-moving-average.c:103:37: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  103 |     char *tmp4 = concat_string(" ", out);
      |                                     ^~~
/tmp/averages-simple-moving-average.c:29:43: note: expected ‘char *’ but argument is of type ‘const char *’
   29 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/averages-simple-moving-average.c: In function ‘main’:
/tmp/averages-simple-moving-average.c:144:14: error: redefinition of ‘xs’
  144 |   list_float xs = xs;
      |              ^~
/tmp/averages-simple-moving-average.c:133:14: note: previous definition of ‘xs’ with type ‘list_float’
  133 |   list_float xs = list_float_create(10);
      |              ^~
/tmp/averages-simple-moving-average.c:150:28: warning: passing argument 1 of ‘pad’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  150 |     const char *line = pad(fmt3(xs.data[i]), 5) + "  " +
      |                            ^~~~~~~~~~~~~~~~
/tmp/averages-simple-moving-average.c:100:23: note: expected ‘char *’ but argument is of type ‘const char *’
  100 | const char *pad(char *s, int width) {
      |                 ~~~~~~^
/tmp/averages-simple-moving-average.c:150:49: error: invalid operands to binary + (have ‘const char *’ and ‘char *’)
  150 |     const char *line = pad(fmt3(xs.data[i]), 5) + "  " +
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                        |                        |
      |                        const char *             char *
/tmp/averages-simple-moving-average.c:151:28: warning: passing argument 1 of ‘pad’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  151 |                        pad(fmt3(sma3.data[i]), 5) + "  " +
      |                            ^~~~~~~~~~~~~~~~~~
/tmp/averages-simple-moving-average.c:100:23: note: expected ‘char *’ but argument is of type ‘const char *’
  100 | const char *pad(char *s, int width) {
      |                 ~~~~~~^
/tmp/averages-simple-moving-average.c:152:28: warning: passing argument 1 of ‘pad’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  152 |                        pad(fmt3(sma5.data[i]), 5);
      |                            ^~~~~~~~~~~~~~~~~~
/tmp/averages-simple-moving-average.c:100:23: note: expected ‘char *’ but argument is of type ‘const char *’
  100 | const char *pad(char *s, int width) {
      |                 ~~~~~~^
/tmp/averages-simple-moving-average.c: At top level:
/tmp/averages-simple-moving-average.c:158:5: error: redefinition of ‘main’
  158 | int main() {
      |     ^~~~
/tmp/averages-simple-moving-average.c:132:5: note: previous definition of ‘main’ with type ‘int()’
  132 | int main() {
      |     ^~~~
